--- a/trunk/IL2DCE/IL2DCE/IL2DCE.csproj
+++ b/trunk/IL2DCE/IL2DCE/IL2DCE.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{22442D49-0A77-4CBE-A1F3-9806958C10AE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IL2DCE.Core</RootNamespace>
-    <AssemblyName>Core</AssemblyName>
+    <RootNamespace>IL2DCE</RootNamespace>
+    <AssemblyName>IL2DCE</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -38,17 +38,23 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\Game\Properties\GlobalAssemblyInfo.cs">
-      <Link>Properties\GlobalAssemblyInfo.cs</Link>
-    </Compile>
     <Compile Include="AircraftInfo.cs" />
     <Compile Include="AirGroup.cs" />
     <Compile Include="AirGroupInfo.cs" />
     <Compile Include="AirGroupWaypoint.cs" />
     <Compile Include="Campaign.cs" />
+    <Compile Include="Core.cs" />
+    <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="GroundGroup.cs" />
     <Compile Include="GroundGroupWaypoint.cs" />
-    <Compile Include="IL2DCE.cs" />
+    <Compile Include="Interfaces\IAircraftInfo.cs" />
+    <Compile Include="Interfaces\IAirGroup.cs" />
+    <Compile Include="Interfaces\ICampaign.cs" />
+    <Compile Include="Interfaces\ICore.cs" />
+    <Compile Include="Interfaces\IGame.cs" />
+    <Compile Include="Interfaces\IGameServer.cs" />
+    <Compile Include="Interfaces\IGameSingle.cs" />
+    <Compile Include="Interfaces\IGroundGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Radar.cs" />
     <Compile Include="Road.cs" />
@@ -71,17 +77,22 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="WSteam, Version=1.0.0.0, Culture=neutral, PublicKeyToken=8b6839725e48404f, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\core\WSteam.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
-      <Project>{34E6EEFF-8967-420F-849B-2E0EB594DC61}</Project>
-      <Name>Interfaces</Name>
-    </ProjectReference>
+    <None Include="Properties\GlobalAssemblyInfo.template" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
     </PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>SubWcRev "$(SolutionDir)." "$(ProjectDir)Properties\GlobalAssemblyInfo.template" "$(ProjectDir)Properties\GlobalAssemblyInfo.cs"</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
