--- a/trunk/IL2DCE/IL2DCE.Pages/IL2DCE.Pages.csproj
+++ b/trunk/IL2DCE/IL2DCE.Pages/IL2DCE.Pages.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IL2DCE.Pages</RootNamespace>
-    <AssemblyName>Pages</AssemblyName>
+    <AssemblyName>IL2DCE.Pages</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
