--- a/trunk/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/trunk/IL2DCE/Campaigns/AircraftInfo.ini
@@ -1,7 +1,27 @@
+# LIASON
+
+# RECON
+# MARITIME_RECON
+# ARMED_RECON
+# ARMED_MARITIME_RECON
+
+# ATTACK_ARMOR
+# ATTACK_VEHICLE
+# ATTACK_ARTILLERY
+# ATTACK_RADAR
+# ATTACK_SHIP
+
+# INTERCEPT
+# NIGHT_INTERCEPT
+# ESCORT
+
+# INTRUDER
+# NIGHT_INTRUDER
+
 [Aircrafts]
   Aircraft.AnsonMkI
   Aircraft.BeaufighterMkIF
-  Aircraft.Bf-108B-2  
+  Aircraft.Bf-108B-2
   Aircraft.Bf-109E-1
   Aircraft.Bf-109E-3
   Aircraft.Bf-109E-3B
@@ -15,7 +35,7 @@
   Aircraft.Do-17Z-1
   Aircraft.Do-17Z-2  
   Aircraft.Do-215B-1
-  Aircraft.FW-200C-1  
+  Aircraft.FW-200C-1
   Aircraft.G50
   Aircraft.GladiatorMkII
   Aircraft.He-111H-2
@@ -34,240 +54,386 @@
   Aircraft.WalrusMkI
   Aircraft.WellingtonMkIc
 [Aircraft.AnsonMkI]
-  missionType0 RECON_AREA
-[Aircraft.AnsonMkI_RECON_AREA]
-  loadout0 1 1
+  MissionType0 RECON
+  MissionType1 MARTITIME_RECON
+[Aircraft.AnsonMkI_Default]
+  Weapons 1 1
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.AnsonMkI_RECON]
+  Loadout0 Default
+  Altitude0 500 5000
+[Aircraft.AnsonMkI_MARTITIME_RECON]
+  Loadout0 Default
+  Altitude0 500 5000
 [Aircraft.BeaufighterMkIF]
-  missionType0 INTERCEPT
-[Aircraft.BeaufighterMkIF_INTERCEPT]
-  loadout0 1 1
+  MissionType0 NIGHT_INTERCEPT
+  MissionType1 NIGHT_INTRUDER
+[Aircraft.BeaufighterMkIF_Default]
+  Weapons 1 1
+  Fuel 100
+  Range #
+[Aircraft.BeaufighterMkIF_NIGHT_INTERCEPT]
+  Loadout0 Default
+  Altitude0 0 10000
+[Aircraft.BeaufighterMkIF_NIGHT_INTRUDER]
+  Loadout0 Default
+  Altitude0 300 3000
 [Aircraft.Bf-108B-2]
-  missionType0 RECON_AREA
-[Aircraft.Bf-108B-2_RECON_AREA]
-  loadout0 1
+  MissionType0 LIASON
+[Aircraft.Bf-108B-2_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+[Aircraft.Bf-108B-2_LIASON]
+  Loadout0 Default
+  Altitude0 500 2000
 [Aircraft.Bf-109E-1]
-  missionType0 ESCORT
-  missionType1 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
+[Aircraft.Bf-109E-1_Default]
+  Weapons 1 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.Bf-109E-1_ESCORT]
-  loadout0 1 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.Bf-109E-1_INTERCEPT]
-  loadout0 1 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.Bf-109E-3]
-  missionType0 ESCORT
-  missionType1 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
+[Aircraft.Bf-109E-3_Default]
+  Weapons 1 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.Bf-109E-3_ESCORT]
-  loadout0 1 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.Bf-109E-3_INTERCEPT]
-  loadout0 1 1  
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.Bf-109E-3B]
-  missionType0 GROUND_ATTACK_TARGET
-[Aircraft.Bf-109E-3B_GROUND_ATTACK_TARGET]
-  loadout0 1 1 2
-  loadout1 1 1 3
+  MissionType0 ATTACK_ARMOR
+  MissionType1 ATTACK_VEHICLE
+  MissionType2 ATTACK_SHIP
+  MissionType3 ATTACK_RADAR
+  MissionType4 ARMED_RECON
+  MissionType5 ARMED_MARITIME_RECON
+[Aircraft.Bf-109E-3B_4xSC50]
+  Weapons 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-3B_1xSC250]
+  Weapons 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-3B_ATTACK_ARMOR]
+  Loadout0 4xSC50
+  Altitude0 500 2000
+  Loadout1 1xSC250
+  Altitude1 500 2000
+[Aircraft.Bf-109E-3B_ATTACK_VEHICLE]
+  Loadout0 4xSC50
+  Altitude0 500 2000
+  Loadout1 1xSC250
+  Altitude1 500 2000
+[Aircraft.Bf-109E-3B_ATTACK_SHIP]
+  Loadout0 1xSC250
+  Altitude0 500 2000
+[Aircraft.Bf-109E-3B_ATTACK_RADAR]
+  Loadout0 4xSC50
+  Altitude0 500 2000
+  Loadout1 1xSC250
+  Altitude1 500 2000
+[Aircraft.Bf-109E-3B_ARMED_RECON]
+  Loadout0 4xSC50
+  Altitude0 500 2000
+  Loadout1 1xSC250
+  Altitude1 500 2000
+[Aircraft.Bf-109E-3B_ARMED_MARITIME_RECON]
+  Loadout0 1xSC250
+  Altitude0 500 2000
 [Aircraft.Bf-110C-4]
-  missionType0 ESCORT
-  missionType1 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
+  MissionType2 NIGHT_INTERCEPT
+[Aircraft.Bf-110C-4_Default]
+  Weapons 1 1 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.Bf-110C-4_ESCORT]
-  loadout0 1 1 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.Bf-110C-4_INTERCEPT]
-  loadout0 1 1 1
+  Loadout0 Default
+  Altitude0 0 10000
+[Aircraft.Bf-110C-4_NIGHT_INTERCEPT]
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.Bf-110C-7]
-  missionType0 GROUND_ATTACK_TARGET
-[Aircraft.Bf-110C-7_GROUND_ATTACK_TARGET]
-  loadout0 1 1 1 2
-  loadout1 1 1 1 3
-  loadout2 1 1 1 4
-  loadout3 1 1 1 5
+  MissionType0 ATTACK_ARMOR
+  MissionType1 ATTACK_VEHICLE
+  MissionType2 ATTACK_SHIP
+  MissionType3 ATTACK_RADAR
+  MissionType4 ARMED_RECON
+  MissionType5 ARMED_MARITIME_RECON
+[Aircraft.Bf-110C-7_2xSC250]
+  Weapons 1 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-110C-7_2xSD250]
+  Weapons 1 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-110C-7_2xSC500]
+  Weapons 1 1 1 4
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-110C-7_2xSD500]
+  Weapons 1 1 1 5
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-110C-7_ATTACK_ARMOR]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 2xSC500
+  Altitude1 500 2000
+[Aircraft.Bf-110C-7_ATTACK_VEHICLE]
+  Loadout0 2xSD250
+  Altitude0 500 2000
+  Loadout1 2xSD500
+  Altitude1 500 2000
+[Aircraft.Bf-110C-7_ATTACK_SHIP]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 2xSC500
+  Altitude1 500 2000
+[Aircraft.Bf-110C-7_ATTACK_RADAR]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 2xSC500
+  Altitude1 500 2000
+[Aircraft.Bf-110C-7_ARMED_RECON]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 2xSC500
+  Altitude1 500 2000
+[Aircraft.Bf-110C-7_ARMED_MARITIME_RECON]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 2xSC500
+  Altitude1 500 2000
 [Aircraft.BlenheimMkI]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET
+[Aircraft.BlenheimMkI_Default]
+  Weapons 1 1 0 0 0
+[Aircraft.BlenheimMkI_4x250lb]
+  Weapons 1 1 2 0 0
+[Aircraft.BlenheimMkI_2x500lb]
+  Weapons 1 1 3 0 0
 [Aircraft.BlenheimMkI_RECON_AREA]
-  loadout0 1 1 0 0 0
+  
 [Aircraft.BlenheimMkI_GROUND_ATTACK_TARGET]
-  loadout0 1 1 2 0 0
-  loadout1 1 1 3 0 0
+
+
+
+
+
 [Aircraft.BlenheimMkIV]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET
 [Aircraft.BlenheimMkIV_RECON_AREA]
-  loadout0 1 1 0 0 0
+  Loadout0 1 1 0 0 0
 [Aircraft.BlenheimMkIV_GROUND_ATTACK_TARGET]
-  loadout0 1 1 2 0 0
-  loadout1 1 1 3 0 0  
+  Loadout0 1 1 2 0 0
+  Loadout1 1 1 3 0 0  
 [Aircraft.BR-20M]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET
 [Aircraft.BR-20M_RECON_AREA]
-  loadout0 1 1 1 0
+  Loadout0 1 1 1 0
 [Aircraft.BR-20M_GROUND_ATTACK_TARGET]
-  loadout0 1 1 1 2
-  loadout1 1 1 1 3
-  loadout2 1 1 1 4
-  loadout3 1 1 1 5
-  loadout4 1 1 1 6
+  Loadout0 1 1 1 2
+  Loadout1 1 1 1 3
+  Loadout2 1 1 1 4
+  Loadout3 1 1 1 5
+  Loadout4 1 1 1 6
 [Aircraft.CR42]
-  missionType0 ESCORT
-  missionType1 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
 [Aircraft.CR42_ESCORT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.CR42_INTERCEPT]
-  loadout0 1  
+  Loadout0 1  
 [Aircraft.DefiantMkI]
-  missionType0 INTERCEPT
+  MissionType0 INTERCEPT
 [Aircraft.DefiantMkI_INTERCEPT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.Do-17Z-1]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET
 [Aircraft.Do-17Z-1_RECON_AREA]
-  loadout0 1 1 1 1 0 0
+  Loadout0 1 1 1 1 0 0
 [Aircraft.Do-17Z-1_GROUND_ATTACK_TARGET]
-  loadout0 1 1 1 1 4 2
-  loadout1 1 1 1 1 4 3
-  loadout2 1 1 1 1 5 2
-  loadout3 1 1 1 1 5 3
+  Loadout0 1 1 1 1 4 2
+  Loadout1 1 1 1 1 4 3
+  Loadout2 1 1 1 1 5 2
+  Loadout3 1 1 1 1 5 3
 [Aircraft.Do-17Z-2]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET  
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET  
 [Aircraft.Do-17Z-2_RECON_AREA]
-  loadout0 1 1 1 1 0 0  
+  Loadout0 1 1 1 1 0 0  
 [Aircraft.Do-17Z-2_GROUND_ATTACK_TARGET]
-  loadout0 1 1 1 1 4 2
-  loadout1 1 1 1 1 4 3
-  loadout2 1 1 1 1 5 2
-  loadout3 1 1 1 1 5 3
+  Loadout0 1 1 1 1 4 2
+  Loadout1 1 1 1 1 4 3
+  Loadout2 1 1 1 1 5 2
+  Loadout3 1 1 1 1 5 3
 [Aircraft.Do-215B-1]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET  
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET  
 [Aircraft.Do-215B-1_RECON_AREA]
-  loadout0 1 1 1 1 0  
+  Loadout0 1 1 1 1 0  
 [Aircraft.Do-215B-1_GROUND_ATTACK_TARGET]
-  loadout1 1 1 1 1 2
-  loadout2 1 1 1 1 3
+  Loadout1 1 1 1 1 2
+  Loadout2 1 1 1 1 3
 [Aircraft.FW-200C-1]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET    
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET    
 [Aircraft.FW-200C-1_RECON_AREA]
-  loadout0 1 1 1 1 0 0 0 
+  Loadout0 1 1 1 1 0 0 0 
 [Aircraft.FW-200C-1_GROUND_ATTACK_TARGET]
-  loadout0 1 1 1 1 2 2 2
+  Loadout0 1 1 1 1 2 2 2
 [Aircraft.G50]
-  missionType2 ESCORT
-  missionType3 INTERCEPT 
+  MissionType2 ESCORT
+  MissionType3 INTERCEPT 
 [Aircraft.G50_ESCORT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.G50_INTERCEPT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.GladiatorMkII]
-  missionType2 ESCORT
-  missionType3 INTERCEPT
+  MissionType2 ESCORT
+  MissionType3 INTERCEPT
 [Aircraft.GladiatorMkII_ESCORT]
-  loadout0 1 1
+  Loadout0 1 1
 [Aircraft.GladiatorMkII_INTERCEPT]
-  loadout0 1 1
+  Loadout0 1 1
 [Aircraft.He-111H-2]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET  
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET  
 [Aircraft.He-111H-2_RECON_AREA]
-  loadout0 1 1 1 1 1 1 0
+  Loadout0 1 1 1 1 1 1 0
 [Aircraft.He-111H-2_GROUND_ATTACK_TARGET]
-  loadout0 1 1 1 1 1 1 2
-  loadout1 1 1 1 1 1 1 3
-  loadout2 1 1 1 1 1 1 4
+  Loadout0 1 1 1 1 1 1 2
+  Loadout1 1 1 1 1 1 1 3
+  Loadout2 1 1 1 1 1 1 4
 [Aircraft.He-111P-2]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET
 [Aircraft.He-111P-2_RECON_AREA]
-  loadout0 1 1 1 1 1 1 0
+  Loadout0 1 1 1 1 1 1 0
 [Aircraft.He-111P-2_GROUND_ATTACK_TARGET]
-  loadout0 1 1 1 1 1 1 2
-  loadout1 1 1 1 1 1 1 3
-  loadout2 1 1 1 1 1 1 4
+  Loadout0 1 1 1 1 1 1 2
+  Loadout1 1 1 1 1 1 1 3
+  Loadout2 1 1 1 1 1 1 4
 [Aircraft.He-115B-2]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET    
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET    
 [Aircraft.He-115B-2_RECON_AREA]
-  loadout0 1 1 0
+  Loadout0 1 1 0
 [Aircraft.He-115B-2_GROUND_ATTACK_TARGET]
-  loadout0 1 1 2
-  loadout1 1 1 3
+  Loadout0 1 1 2
+  Loadout1 1 1 3
 [Aircraft.SpitfireMkI_Heartbreaker]
-  missionType2 ESCORT
-  missionType3 INTERCEPT
+  MissionType2 ESCORT
+  MissionType3 INTERCEPT
 [Aircraft.HurricaneMkI_dH5-20]
-  missionType2 ESCORT
-  missionType3 INTERCEPT
+  MissionType2 ESCORT
+  MissionType3 INTERCEPT
 [Aircraft.HurricaneMkI_dH5-20_ESCORT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.HurricaneMkI_dH5-20_INTERCEPT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.HurricaneMkI]
-  missionType2 ESCORT
-  missionType3 INTERCEPT  
+  MissionType2 ESCORT
+  MissionType3 INTERCEPT  
 [Aircraft.HurricaneMkI]
-  loadout0 1
+  Loadout0 1
 [Aircraft.HurricaneMkI]
-  loadout0 1  
+  Loadout0 1  
 [Aircraft.Ju-87B-2]
-  missionType0 GROUND_ATTACK_TARGET
+  MissionType0 GROUND_ATTACK_TARGET
 [Aircraft.Ju-87B-2_GROUND_ATTACK_TARGET]
-  loadout0 1 1 1 1
-  loadout1 1 1 3 1
-  loadout2 1 1 2 0
-  loadout3 1 1 4 0
+  Loadout0 1 1 1 1
+  Loadout1 1 1 3 1
+  Loadout2 1 1 2 0
+  Loadout3 1 1 4 0
 [Aircraft.Ju-88A-1]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET
 [Aircraft.Ju-88A-1_RECON_AREA]  
-  loadout0 1 1 1 0 0 0
+  Loadout0 1 1 1 0 0 0
 [Aircraft.Ju-88A-1_GROUND_ATTACK_TARGET]
-  loadout0 1 1 1 2 2 2
-  loadout1 1 1 1 3 2 6
+  Loadout0 1 1 1 2 2 2
+  Loadout1 1 1 1 3 2 6
 [Aircraft.SpitfireMkI]
-  missionType0 ESCORT
-  missionType1 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
 [Aircraft.SpitfireMkI_ESCORT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.SpitfireMkI_INTERCEPT]
-  loadout0 1  
+  Loadout0 1  
 [Aircraft.SpitfireMkIa]
-  missionType0 ESCORT
-  missionType1 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
 [Aircraft.SpitfireMkIa_ESCORT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.SpitfireMkIa_INTERCEPT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.SpitfireMkIIa]
-  missionType0 ESCORT
-  missionType1 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
 [Aircraft.SpitfireMkIIa_ESCORT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.SpitfireMkIIa_INTERCEPT]
-  loadout0 1
+  Loadout0 1
 [Aircraft.SunderlandMkI]
-  missionType0 RECON_AREA
+  MissionType0 RECON_AREA
 [Aircraft.SunderlandMkI_RECON_AREA]  
-  loadout0 1
+  Loadout0 1
 [Aircraft.DH82A]
-  missionType0 RECON_AREA
+  MissionType0 RECON_AREA
 [Aircraft.DH82A_RECON_AREA]  
-  loadout0 1
+  Loadout0 1
 [Aircraft.WalrusMkI]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET
 [Aircraft.WalrusMkI_RECON_AREA]  
-  loadout0 1 1 0 0
+  Loadout0 1 1 0 0
 [Aircraft.WalrusMkI_GROUND_ATTACK_TARGET]
-  loadout0 1 1 2 2
-  loadout1 1 1 3 3
+  Loadout0 1 1 2 2
+  Loadout1 1 1 3 3
 [Aircraft.WellingtonMkIc]
-  missionType0 RECON_AREA
-  missionType1 GROUND_ATTACK_TARGET
+  MissionType0 RECON_AREA
+  MissionType1 GROUND_ATTACK_TARGET
   [Aircraft.WellingtonMkIc_RECON_AREA]  
-  loadout0 1 1 0
+  Loadout0 1 1 0
 [Aircraft.WellingtonMkIc_GROUND_ATTACK_TARGET]
-  loadout0 1 1 2
-  loadout1 1 1 3
+  Loadout0 1 1 2
+  Loadout1 1 1 3
 
 
  
