--- a/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/IL2DCE/Campaigns/AircraftInfo.ini
@@ -23,8 +23,11 @@
   Aircraft.BeaufighterMkIF
   Aircraft.Bf-108B-2
   Aircraft.Bf-109E-1 
+  Aircraft.Bf-109E-1B
   Aircraft.Bf-109E-3
   Aircraft.Bf-109E-3B
+  Aircraft.Bf-109E-4
+  Aircraft.Bf-109E-4B
   Aircraft.Bf-110C-4
   Aircraft.Bf-110C-7
   Aircraft.BlenheimMkI
@@ -89,6 +92,22 @@
   Fuel 100
   Range #
   Ceiling #
+[Aircraft.Bf-109E-1B]
+  Player 1
+  ATTACK_ARMOR /4xSC50 500 2000 /1xSC250 500 2000
+  ATTACK_VEHICLE /4xSC50 500 2000 /1xSC250 500 2000
+  ATTACK_SHIP /1xSC250 500 2000
+  ATTACK_RADAR /4xSC50 500 2000 /1xSC250 500 2000
+[Aircraft.Bf-109E-1B_4xSC50]
+  Weapons 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-1B_1xSC250]
+  Weapons 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #  
 [Aircraft.Bf-109E-3]
   Player 1
   ESCORT /Default 0 10000
@@ -111,6 +130,32 @@
   Range #
   Ceiling #
 [Aircraft.Bf-109E-3B_1xSC250]
+  Weapons 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-4]
+  Player 1
+  ESCORT /Default 0 10000
+  INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
+[Aircraft.Bf-109E-4_Default]
+  Weapons 1 1
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-4B]
+  Player 1
+  ATTACK_ARMOR /4xSC50 500 2000 /1xSC250 500 2000
+  ATTACK_VEHICLE /4xSC50 500 2000 /1xSC250 500 2000
+  ATTACK_SHIP /1xSC250 500 2000
+  ATTACK_RADAR /4xSC50 500 2000 /1xSC250 500 2000
+[Aircraft.Bf-109E-4B_4xSC50]
+  Weapons 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-4B_1xSC250]
   Weapons 1 1 3
   Fuel 100
   Range #
